--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
     "scripts": {
-      "build": "tsc",
-      "serve": "ts-node-dev src/app.ts"
+        "build": "tsc",
+        "serve": "ts-node-dev src/app.ts",
+        "lint": "eslint . && prettier . --write"
     },
     "prisma": {
-      "schema": "./src/models/schema.prisma"
+        "schema": "./src/models/schema.prisma"
     },
     "dependencies": {
-      "@prisma/client": "5.16.2",
-      "@types/express": "^4.17.21",
-      "@types/node": "^20.14.10",
-      "express": "^4.19.2",
-      "prisma": "^5.16.2",
-      "ts-node": "^10.9.2",
-      "tsc": "^2.0.4",
-      "typescript": "^5.5.3"
+        "@prisma/client": "5.16.2",
+        "@types/express": "^4.17.21",
+        "@types/node": "^20.14.10",
+        "express": "^4.19.2",
+        "prisma": "^5.16.2",
+        "ts-node": "^10.9.2",
+        "tsc": "^2.0.4",
+        "typescript": "^5.5.3"
     },
     "devDependencies": {
-      "ts-node-dev": "^2.0.0"
+        "@eslint/js": "^9.9.1",
+        "@types/eslint__js": "^8.42.3",
+        "eslint": "^9.9.1",
+        "eslint-config-prettier": "^9.1.0",
+        "prettier": "3.3.3",
+        "ts-node-dev": "^2.0.0",
+        "typescript-eslint": "^8.3.0"
     }
-  }
-  
+}
