--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,5 @@
         "rootDir": "src",
         "types": []
     },
-    "include": [
-        "src/**/*.ts", 
-        "node_modules/@types"
-    ], 
+    "include": ["src/**/*.ts", "node_modules/@types"]
 }
