--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.9.1",
+        "@google/generative-ai": "^0.17.1",
         "@types/eslint__js": "^8.42.3",
+        "@types/is-base64": "^1.1.3",
         "eslint": "^9.9.1",
         "eslint-config-prettier": "^9.1.0",
+        "is-base64": "^1.1.0",
+        "joi": "^17.13.3",
         "prettier": "3.3.3",
         "ts-node-dev": "^2.0.0",
         "typescript-eslint": "^8.3.0"
