--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@ node_modules
 # Keep environment variables out of version control
 dist
 src/models/migrations/*
+!src/models/migrations/*_init 
+!src/models/migrations/migration_lock.toml
 .env
 tmp/*
